fixed login buttons showing up weird on mobile

--- a/styles/login_page_styles.css
+++ b/styles/login_page_styles.css
@@ -26,7 +26,7 @@ input:focus {
 button {
     font-size: 16px;
     height: 7vh;
-    width: 15vw;
+    width: 25vw;
     border-style: none;
     border-radius: 25px;
     background-color: #938a80;
